--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <title>resume</title>
 </head>
 <body>
-    <embed src="/resume/履歷.pdf" type="application/pdf" width="100%" height="500">
+    <embed src="/resume/aa.pdf" type="application/pdf" width="100%" height="500">
 
 </body>
 </html>
